# CryptoPassphrase

./: .gitignore  CryptoPassphrase.h  CryptoPassphrase.m  LegacyPasswordGenerator.h  LegacyPasswordGenerator.m  Makefile  NewPasswordGenerator.h  NewPasswordGenerator.m  PasswordGenerator.h  ScryptPWGen.h  ScryptPWGen.m  meson.build
.fossil-settings/: clean-glob  ignore-glob
Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/jni/: native-lib.m
Android/app/src/main/res/layout/: activity_main.xml  content_main.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml
Android/gradle/wrapper/: gradle-wrapper.properties
iOS/: AboutController.h  AboutController.m  AboutController.swift  AddSiteController.h  AddSiteController.m  AddSiteController.swift  AppDelegate.h  AppDelegate.m  AppDelegate.swift  HTTPServerDelegate.h  HTTPServerDelegate.m  HTTPServerDelegate.swift  Info.plist  MainViewController.h  MainViewController.m  MainViewController.swift  SelectKeyFileController.h  SelectKeyFileController.m  SelectKeyFileController.swift  ShowDetailsController.h  ShowDetailsController.m  ShowDetailsController.swift  SiteStorage.h  SiteStorage.m  SiteStorage.swift  bridge.h  main.m
iOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
iOS/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
iOS/CryptoPassphrase.xcodeproj/: project.pbxproj
iOS/scrypt-pwgen.xcodeproj/: project.pbxproj
(+3 files in other folders)
